GPC/tests/examples/fail/errNeg.gpc


int errNeg() {
    
    bool x = true;
    int y = -x;
    return y;

}
